[package]
name = "qatrader-rs"
version = "0.1.0"
authors = ["yutiansut <yutiansut@qq.com>"]
edition = "2018"
description = "Quantitative Financial Framework"
repository = "https://github.com/yutiansut/qatrader-rs"
readme = "README.md"
documentation = "http://doc.yutiansut.com"
keywords = ["amqp", "rabbitmq", "quantaxis", "quant"]
categories = ["science"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.3.11" # mongodb
amiquip = "0.3"
futures = "^0.1"
log = "^0.4"
chrono = { version = "0.4", features = ["serde"] } # datetime
env_logger = "^0.7" 
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] } # 序列化
rayon = "1.1" # 多线程
ndarray = "0.13.0" # ndarray
ws = "0.7.8"
